--- a/starter.html
+++ b/starter.html
@@ -126,7 +126,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 			<dd><input id="mobile" name="mobile" type="tel" placeholder="countrycode+number" required="required"></dd>
 			<dt><label>Account Type</label></dt>
 			<dd><select name="accountType" id="accountType" onblur="validate()">
-					<option value="select" selected="selected">--select--</option>
+					<option value='select' selected='selected'>--select--</option>
   					<option value="savings">Savings</option>
   					<option value="recurring">Recurring</option>
 				</select>
